# hackatontonton

./: .env.example  .gitignore  CASOS_DE_USO.md  README.md  advanced_flow_model.joblib  connection_classifier.joblib  install.sh  pyproject.toml  run_tests.sh  start_service.sh  stop_service.sh  test_advanced_training.py  test_ml_model.py  test_service.py  visualize_model.py
app/: __init__.py  advanced_flow_classifier.py  main.py  ml_model.py  models.py
collector/: README.md  project.clj  test_api.sh
collector/src/collector/: components.clj  core.clj
collector/src/collector/components/: database.clj  webapp.clj
collector/src/collector/controllers/: decisions.clj
collector/src/collector/models/: decision.clj
collector/test/collector/components/: database_test.clj
collector/test/collector/controllers/: decisions_test.clj
collector/test/collector/integration/: api_test.clj
collector/test/collector/models/: decision_test.clj
