[tool.poetry]
name = "web-app-experience-service"
version = "0.1.0"
description = "Servicio web para procesar experiencia web y app"
authors = ["Your Name <your.email@example.com>"]
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.8.1"
fastapi = "0.104.1"
uvicorn = {extras = ["standard"], version = "0.24.0.post1"}
pydantic = "2.10.6"
requests = "2.32.4"
scikit-learn = "1.3.2"
numpy = "1.24.4"
joblib = "1.4.2"
matplotlib = "3.7.5"
seaborn = "0.12.2"

[tool.poetry.group.dev.dependencies]
pytest = "7.4.4"
black = "23.12.1"
isort = "5.13.2"
flake8 = "6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88
